RESOLVED FIXED274959
[WPE GTK Debug] API test `TestWebCore.MIMETypeRegistry.ExtensionsForMIMEType` is a constant crash
https://bugs.webkit.org/show_bug.cgi?id=274959
Summary [WPE GTK Debug] API test `TestWebCore.MIMETypeRegistry.ExtensionsForMIMEType`...
Vitaly Dyackhov
Reported 2024-05-31 04:34:56 PDT
``` $ run-wpe-tests --debug TestWebCore -p MIMETypeRegistry.ExtensionsForMIMEType *** *** Warning: jhbuild environment not present and not running in flatpak. *** Run update-webkitwpe-libs or update-webkit-flatpak before build-webkit to ensure proper testing.. *** NOT IMPLEMENTED YET /home/vitaly/WebKit/Source/WebCore/platform/xdg/MIMETypeRegistryXdg.cpp(74) : static WTF::Vector<WTF::String> WebCore::MIMETypeRegistry::extensionsForMIMEType(const WTF::String&) 1 0x558cf23a9b1c WTFCrash 2 0x558cf6fbe979 ??? 3 0x558cefe163a3 TestWebKitAPI::MIMETypeRegistry_ExtensionsForMIMEType_Test::TestBody() 4 0x7f44226fe5bb void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 5 0x7f44226f4f43 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 6 0x7f44226d9e7c testing::Test::Run() 7 0x7f44226da797 testing::TestInfo::Run() 8 0x7f44226db1db testing::TestSuite::Run() 9 0x7f44226e8b10 testing::internal::UnitTestImpl::RunAllTests() 10 0x7f44226fff94 bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 11 0x7f44226f5edd bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 12 0x7f44226e713b testing::UnitTest::Run() 13 0x558cefd0b385 RUN_ALL_TESTS() 14 0x558cefd0b937 TestWebKitAPI::TestsController::run(int, char**) 15 0x558cefe89c48 main 16 0x7f441f273a90 __libc_start_call_main 17 0x7f441f273b49 __libc_start_main 18 0x558cefd0ae25 _start **CRASH** MIMETypeRegistry.ExtensionsForMIMEType Unexpected crashes (1) /TestWebCore MIMETypeRegistry.ExtensionsForMIMEType Ran 1 tests of 1 with 0 successful ```
Attachments
Vitaly Dyackhov
Comment 1 2024-05-31 04:39:02 PDT
EWS
Comment 2 2024-05-31 06:57:31 PDT
Committed 279575@main (1748da270165): <https://commits.webkit.org/279575@main> Reviewed commits have been landed. Closing PR #29368 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-05-31 06:58:13 PDT
Note You need to log in before you can comment on or make changes to this bug.