Cherry-pick 279575@main (1748da270165). https://bugs.webkit.org/show_bug.cgi?id=274959

[WPE GTK Debug] API test `TestWebCore.MIMETypeRegistry.ExtensionsForMIMEType` is a constant crash
    https://bugs.webkit.org/show_bug.cgi?id=274959

    Reviewed by Carlos Garcia Campos.

    This patch implements `MIMETypeRegistry::extensionsForMIMEType`
    on Linux by using `xdg_mime_get_simple_globs()`.

    * Source/WebCore/platform/xdg/MIMETypeRegistryXdg.cpp:
    (WebCore::MIMETypeRegistry::extensionsForMIMEType):

    Canonical link: https://commits.webkit.org/279575@main

Canonical link: https://commits.webkit.org/274313.300@webkitglib/2.44